# dual-laplace

./: CMakeLists.txt  README.md  entry.md  main.cpp
assets/: ~$dual_laplacian presentation.pptx
data/: cube.off  empty-sphere.off  equi-tet.off  fertility.off  pan.off  sphere.off  stick.off  thick-plate.off  thin-plate.off
include/: circumcentre.h  circumcentre3d.h  dual_laplacian.h  tet_volume.h
src/: circumcentre.cpp  circumcentre3d.cpp  cotmatrix.cpp  dual_laplacian.cpp  massmatrix.cpp  smooth.cpp  tet_volume.cpp
